--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,41 +1,44 @@
 name: Generate Snake Animation
 
+# Controls when the action will run
 on:
-  # Run automatically every 24 hours
+  # Run automatically every 12 hours
   schedule:
-    - cron: "0 */24 * * *"
+    - cron: "0 */12 * * *"
   
-  # Allows you to run this workflow manually from the Actions tab
+  # Allows manual trigger from the Actions tab
   workflow_dispatch:
   
-  # Run on every push to main branch
+  # Run on every push to main/master branch
   push:
     branches:
-    - main
+      - main
+      - master
 
 jobs:
   generate:
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
-    timeout-minutes: 10
+    timeout-minutes: 5
     
     steps:
-      # Checkout the repository
-      - name: Checkout
+      # Step 1: Checkout repository
+      - name: Checkout repository
         uses: actions/checkout@v3
       
-      # Generate the snake animation
+      # Step 2: Generate snake animation
       - name: Generate github-contribution-grid-snake.svg
-        uses: Platane/snk/svg-only@v3
+        uses: Platane/snk@v3
         with:
-          github_user_name: ${{ github.repository_owner }}
+          github_user_name: JACELL100
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            dist/ocean.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
       
-      # Push the generated files to the output branch
-      - name: Push github-contribution-grid-snake.svg to output branch
+      # Step 3: Push to output branch
+      - name: Push to output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
